--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
       <p class="prompt"> Directory of C:\Users\User</p>
       <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          .</p>
       <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          ..</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 1 : Case study on building data warehouse. Write detailed problem statement and design dimensional modeling</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 2 :  Implementation of all dimension tables and fact tables based on experiment 1 case study</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 3 :   To perform OLAP operations in SQL environment based on experiment 1 case study.</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 4 :   To perform OLAP operations in SQL environment based on experiment 1 case study.</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 5 :   To study WEKA and implement thedecision tree algorithm using WEKA.</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 6 :   To implement Naive Bayes classification algorithm using python</p>
+
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 7 :   To implement K-means clustering algorithm using python</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 8 :   Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 9 :   To implement association mining algorithm like Apriori using python </p>
+      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 10 :   Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
       <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          Which experiment number?</p>
     </div>
 
