--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  const correctPassword = 'yourPassword'; // Set your password here
+  const correctPassword = 'home'; // Set your password here
   const overlay = document.getElementById('overlay');
   const passwordInput = document.getElementById('password-input');
   const terminalWindow = document.querySelector('.terminal-window');
