--- a/index.html
+++ b/index.html
@@ -3,68 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CMD Style Interface</title>
+  <title>Ubuntu CMD Style Interface</title>
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body, html {
       height: 100%;
       margin: 0;
-      background-color: #000;
-      color: #0f0;
-      font-family: 'Courier New', Courier, monospace;
+      background-image: url(bg.jpg);
+      background-size: cover;
+      background-color: #300a24; /* Ubuntu terminal background */
+      color: #eee; /* Ubuntu terminal text color */
+      font-family: 'Ubuntu Mono', monospace; /* Ubuntu terminal font */
       overflow: hidden; /* Prevent scrolling */
     }
+
     .terminal-window {
-      border: 1px solid #0f0;
-      border-radius: 5px;
-      padding: 20px;
+      border: 1px solid #333;
+      border-radius: 8px;
       margin: 50px auto;
       width: 90%;
       max-width: 900px;
-      background-color: #111;
-      box-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+      background-color: #300a24; /* Dark Ubuntu terminal window background */
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
       display: none; /* Hide terminal initially */
     }
+
+    /* Terminal window header (mimicking Ubuntu title bar) */
+    .terminal-header {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      background-color: #2c001e;
+      padding: 5px 10px;
+      border-radius: 8px 8px 0 0;
+    }
+
+    /* Minimize, maximize, close buttons */
+    .terminal-buttons {
+      display: flex;
+      gap: 8px;
+    }
+
+    .terminal-button {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+    }
+
+    .close-btn {
+      background-color: #ff5f56;
+    }
+
+    .minimize-btn {
+      background-color: #ffbd2e;
+    }
+
+    .maximize-btn {
+      background-color: #27c93f;
+    }
+
+    .terminal-title {
+      margin-left: 20px;
+      color: #fff;
+      font-size: 0.9rem;
+      font-weight: bold;
+    }
+
     .prompt {
       display: block;
       margin-bottom: 5px;
+      color: #4E9A06; /* Ubuntu terminal green prompt */
     }
+
     .input-line {
       display: flex;
       align-items: center;
     }
+
     .input-line span {
       margin-right: 5px;
+      color: #729FCF; /* Ubuntu terminal blue path */
     }
+
     .terminal-content {
-      min-height: 400px;
-      max-height: 500px;
+      min-height: 80vh;
+      max-height: 90vh;
       overflow-y: auto;
       padding-right: 10px;
+      color: #EEE; /* Ubuntu terminal light text */
     }
+
     .overlay {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.8); /* Dark overlay */
+      background-color: rgba(0, 0, 0, 0.9); /* Dark overlay */
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 10; /* Above all other content */
     }
+
     .password-prompt {
-      background-color: #222;
+      background-color: #4e1045;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
+
     a {
-      color: #0f0;
+      color: #729FCF; /* Ubuntu terminal link color */
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
@@ -83,31 +137,37 @@
 <!-- Terminal Interface -->
 <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
   <div class="terminal-window">
+    
+    <!-- Terminal Header -->
+    <div class="terminal-header">
+      <div class="terminal-buttons">
+        <div class="terminal-button close-btn"></div>
+        <div class="terminal-button minimize-btn"></div>
+        <div class="terminal-button maximize-btn"></div>
+      </div>
+      <div class="terminal-title">Terminal</div>
+    </div>
+
     <div class="terminal-content">
-      <p class="prompt">C:\Users\User&gt; Welcome to the terminal</p>
-      <p class="prompt">C:\Users\User&gt; Type the experiment number to download the PDF</p>
-      <!-- Example output -->
-      <p class="prompt">C:\Users\User&gt; dir</p>
-      <p class="prompt"> Volume in drive C has no label.</p>
-      <p class="prompt"> Directory of C:\Users\User</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          .</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          ..</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 1 : Case study on building data warehouse. Write detailed problem statement and design dimensional modeling</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 2 :  Implementation of all dimension tables and fact tables based on experiment 1 case study</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 3 :   To perform OLAP operations in SQL environment based on experiment 1 case study.</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 4 :   To perform OLAP operations in SQL environment based on experiment 1 case study.</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 5 :   To study WEKA and implement the decision tree algorithm using WEKA.</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 6 :   To implement Naive Bayes classification algorithm using python</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 7 :   To implement K-means clustering algorithm using python</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 8 :   Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 9 :   To implement association mining algorithm like Apriori using python </p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;Exp 10 :   Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
-      <p class="prompt"> 10/19/2024  08:25 AM    &lt;DIR&gt;          Which experiment number?</p>
+      <p class="prompt">user@ubuntu:~$ Welcome to the terminal</p>
+      <p class="prompt">user@ubuntu:~$ Type the experiment number to download the PDF</p>
+      <p class="prompt">user@ubuntu:~$ ls</p>
+      <p class="prompt">Exp 1 : Case study on building data warehouse. Write detailed problem statement and design dimensional modeling</p>
+      <p class="prompt">Exp 2 :  To implement simple programs using PROLOG as an AI programming Language</p>
+      <p class="prompt">Exp 3 :  To implement 8 puzzle problem using heuristic technique in python</p>
+      <p class="prompt">Exp 4 :  To implement A* algorithm using python for the given graph.</p>
+      <p class="prompt">Exp 5 :  To perform adversarial search using Minmax Algorithm in python</p>
+      <p class="prompt">Exp 6 :  To perform local search techniques using Hill Climbing Algorithm in python.</p>
+      <p class="prompt">Exp 7 :  To implement forwardchaining algorithm using python.</p>
+      <p class="prompt">Exp 8 :  To implement backwardchaining algorithm using python.</p>
+      <p class="prompt">Exp 9 :  To implement a bot using python</p>
+      <p class="prompt">Exp 10 : To implement a Bayesian Network using python.</p>
+      <p class="prompt">user@ubuntu:~$ Which experiment number?</p>
     </div>
 
     <div class="input-line">
-      <span>C:\Users\User&gt;</span>
-      <input type="text" placeholder="eg. 7" class="form-control bg-dark text-success border-0" id="cmd-input" autofocus>
+      <span>user@ubuntu:~$</span>
+      <input type="text" placeholder="eg. 7" class="form-control bg-dark text-light border-0" id="cmd-input" autofocus>
     </div>
   </div>
 </div>
@@ -126,8 +186,13 @@
       if (passwordInput.value === correctPassword) {
         overlay.style.display = 'none'; // Hide the overlay
         terminalWindow.style.display = 'block'; // Show the terminal
+        openFullScreen();
       } else {
-        alert('Incorrect password. Access denied.');
+        const terminalContent = document.querySelector(".terminal-content");
+        const errorPrompt = document.createElement("p");
+        errorPrompt.classList.add("prompt");
+        errorPrompt.textContent = "user@ubuntu:~$ Incorrect password. Please try again.";
+        terminalContent.appendChild(errorPrompt);
         passwordInput.value = ''; // Clear input
       }
     }
@@ -150,7 +215,7 @@
       // Add new line with the command
       const newPrompt = document.createElement("p");
       newPrompt.classList.add("prompt");
-      newPrompt.textContent = "C:\\Users\\User> " + inputValue;
+      newPrompt.textContent = "user@ubuntu:~$ " + inputValue;
       terminalContent.appendChild(newPrompt);
 
       // Clear input field
@@ -178,6 +243,20 @@
       terminalContent.scrollTop = terminalContent.scrollHeight;
     }
   });
+
+  // Function to open in full screen mode
+  function openFullScreen() {
+    const elem = document.documentElement;
+    if (elem.requestFullscreen) {
+      elem.requestFullscreen();
+    } else if (elem.mozRequestFullScreen) { // Firefox
+      elem.mozRequestFullScreen();
+    } else if (elem.webkitRequestFullscreen) { // Chrome, Safari, and Opera
+      elem.webkitRequestFullscreen();
+    } else if (elem.msRequestFullscreen) { // IE/Edge
+      elem.msRequestFullscreen();
+    }
+  }
 </script>
 
 </body>
