--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
       <p class="prompt">user@ubuntu:~$ Type the experiment number to download the PDF</p>
       <p class="prompt">user@ubuntu:~$ ls</p>
       <p class="prompt">Exp 1 : Case study on building data warehouse. Write detailed problem statement and design dimensional modeling</p>
-      <p class="prompt">Exp 2 :  To implement simple programs using PROLOG as an AI programming Language</p>
-      <p class="prompt">Exp 3 :  To implement 8 puzzle problem using heuristic technique in python</p>
-      <p class="prompt">Exp 4 :  To implement A* algorithm using python for the given graph.</p>
-      <p class="prompt">Exp 5 :  To perform adversarial search using Minmax Algorithm in python</p>
-      <p class="prompt">Exp 6 :  To perform local search techniques using Hill Climbing Algorithm in python.</p>
-      <p class="prompt">Exp 7 :  To implement forwardchaining algorithm using python.</p>
-      <p class="prompt">Exp 8 :  To implement backwardchaining algorithm using python.</p>
-      <p class="prompt">Exp 9 :  To implement a bot using python</p>
+      <p class="prompt">Exp 2 :  Implementation of all dimension tables and fact tables based on experiment 1 case study</p>
+      <p class="prompt">Exp 3 :  To perform OLAP operations in SQL environment based on experiment 1 case study.</p>
+      <p class="prompt">Exp 4 : To study WEKA and implement thedecision tree algorithm using WEKA.</p>
+      <p class="prompt">Exp 5 :   To implement data discretization and data visualization using WEKA.</p>
+      <p class="prompt">Exp 6 :  To implement Naive Bayes classification algorithm using python</p>
+      <p class="prompt">Exp 7 :  To implement K-means clustering algorithm using python</p>
+      <p class="prompt">Exp 8 : Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
+      <p class="prompt">Exp 9 :  To implement association mining algorithm like Apriori using python</p>
       <p class="prompt">Exp 10 : To implement a Bayesian Network using python.</p>
       <p class="prompt">user@ubuntu:~$ Which experiment number?</p>
     </div>
