--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <p class="prompt">Exp 7 :  To implement K-means clustering algorithm using python</p>
       <p class="prompt">Exp 8 : Implementation of Agglomerative hierarchical clustering algorithm using python.</p>
       <p class="prompt">Exp 9 :  To implement association mining algorithm like Apriori using python</p>
-      <p class="prompt">Exp 10 : To implement a Bayesian Network using python.</p>
+      <p class="prompt">Exp 10 :  Implementation of Page Rank algorithm in python.</p>
       <p class="prompt">user@ubuntu:~$ Which experiment number?</p>
     </div>
 
